--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,55 @@
 {% extends "layout.html" %}
 
 {% block body %}
-	<form action="/hello">
-		<input name="name" type="text">
-		<input type="submit">
-	</form>
+	<br><br><br>
+	<h1 class="text-center">Hi!</h1>
+	<p class="lead text-center">My name is Shanaya Barretto, nice to meet you!</p>
+	<p class="text-center">I am a 2021 Schulich Leader studying Mechatronics Engineering at the University of Waterloo.</p>
+	<p class="text-center">I love working with both hardware and software, and strive to solve real world problems with the knowledge I accumulate.</p>
+	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+		</div>
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img src="../static/images/campusvisit.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>UWaterloo</h5>
+			  <p>2021</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../static/images/kennedymain.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Kennedy Space Center</h5>
+			  <p>2019</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../static/images/robotics.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>FIRST Robotics Competition</h5>
+			  <p>2020</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../static/images/womensday.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Mayor Crombie's International Women's Day Breakfast</h5>
+			  <p>2020</p>
+			</div>
+		  </div>
+		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Next</span>
+		</button>
+	</div>
 {% endblock %}
