--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,10 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shanaya Barretto</title>
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="../static/style.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light nav justify-content-center">
+      <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light nav justify-content-center">
           <div class="container-fluid">
                 <a class="navbar-brand">Shanaya Barretto</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,16 +34,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('hobbies') }}">Hobbies</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('blog') }}">Blog</a>
-                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         {% block body %}
-		{% endblock %}
-        <div class="fixed-bottom">
+		    {% endblock %}
+        <div class="fixed-bottom" style="background-color: white">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/shanayabarretto/">LinkedIn</a>
