--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,5 +1,96 @@
 {% extends "layout.html" %}
 {% block body %}
   <br><br><br>
-  <h1>Hello</h1>
+  <div class="wrapper" style="margin-left: 40px; margin-right: 40px;">
+    <div class="col-item" style="width: 64%">
+      <h1>DevOps Software Developer</h1>
+      <h2>Imagine Communications</h2>
+    </div>
+    <div class="col-item" style="width: 34%">
+      <h1>PATH Student (TA)</h1>
+      <h2>St. Joseph Secondary School</h2>
+    </div>
+    <div class="col-item" style="width: 64%">
+      <p>
+        I just completed my first co-op at Imagine Communications. 
+        I learned so much this term, and not just in technical aspects. 
+        Being in the workspace (though remotely) allowed me to learn from other professionals by example, 
+        which I found to be incredibly beneficial. I witnessed my coworkers problem solve, and began to use 
+        their techniques when I ran into issues. I also learnt the importance of keeping your workspace and 
+        code organized and neat. I was only able to look at code others wrote and understand it enough to make 
+        additions because they left thorough documentation and heavily commented code behind. Finally, working 
+        in this team environment definitely allowed me to become a better communicator. Attending stand up 
+        meetings allowed me to practice speaking clearly and concisely and was something I became increasingly 
+        more comfortable with as the term progressed.
+      </p>
+      <p>
+        I also tried to involve myself in outside of work activities and joined the social comittee. 
+        As part of that team, I helped organize and host a few events like a trivia night and a board game night. 
+        I hope to continue being involved in similar initiatives in future positions.
+      </p>
+      <p>
+        On the technical side, I became more comfortable with many more frameworks and programming languages. 
+        I worked a lot with Jenkins, Terraform, and Ansible, and became familiar with groovy and YAML file syntax. 
+        I also used a linux machine as my primary dev box, and have become proficient using its command line. 
+        Moreover, I also learned to use tools like docker and kubernetes, which we used for deployments. 
+        Additionally, I spent some time experimenting with powershell cmdlets, and gained experience using 
+        both powershell and C#. Lastly, since it was my first time programming in a team environment, I also 
+        learned to use git, this knowledge is now something I utilize for all of my personal projects. It was 
+        certainly a lot to learn in a short time, but as a result, I find the prospect of learning a large amount 
+        of new things for future roles much less daunting.
+      </p>
+    </div>
+    <div class="col-item" style="width: 34%">
+      <p>
+        My high school offered a co-op opportunity for all Grade 12 students, which was to be a PATH student, 
+        or Teaching Assistant, for a Grade 9 or 10 class. My favourite classes in high school were my computer 
+        engineering courses, so I decided to become a PATH student for the Grade 10 version of the course. I had 
+        a lot of fun making lesson plans, teaching my students about computer history in interesting ways, 
+        showing them the real world applications of the circuit boards we made, and more. We covered a range 
+        of topics including binary, circuit components, logic gates, basic programming principles, and I pushed 
+        them to put their knowledge to use by guiding them to design solar power alarm clock circuits on Tinkercad, 
+        creating a binary counter with MultiMedia Logic, programming robots using VEX resources, and completing other similar projects. 
+      </p>
+      <p>
+        My passion for engineering really grew during this time, and it really helped me confirm that this was 
+        the field I wanted to enter. I also learned a lot myself through making each new lesson plan, it was an 
+        experience I am very glad to have had. 
+      </p>
+    </div>
+  </div> 
+  <br>
+  <div class="row" style="width: 100%;">
+    <div class="col-sm-6" style="width: 24%; margin-left: 40px">
+      <div class="card">
+        <img src="../static/images/gamenight.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Screenshot from the office game night!</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6" style="width: 24%">
+      <div class="card">
+        <img src="../static/images/binary.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Excerpt from the PATH Binary Lesson.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6" style="width: 24%">
+      <div class="card">
+        <img src="../static/images/tinkercad.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Solar Alarm Clock project on Tinkercad.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6" style="width: 24%">
+      <div class="card">
+        <img src="../static/images/vex.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Snippet of the VEX Robot code.</p>
+        </div>
+      </div>
+    </div>
+  </div> <br><br><br>
 {% endblock %}
