--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
         </nav>
         {% block body %}
 		    {% endblock %}
-        <div class="fixed-bottom" style="background-color: white">
+        <div class="fixed-bottom bg-light">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/shanayabarretto/">LinkedIn</a>
