--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,5 +1,137 @@
 {% extends "layout.html" %}
 {% block body %}
   <br><br><br>
-  <h1>Hello</h1>
+  <main>
+    <section class="py-5 text-center container" style="background-color: #BEE5B0;">
+      <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <h1 class="fw-light">Projects</h1>
+          <p class="lead">This is a collection of engineering related projects I have worked on in the past or am currently working on. I have learned so much from these projects, and I am really proud of how they turned out.</p>
+        </div>
+      </div>
+    </section>
+  
+    <div class="album py-5 bg-light">
+      <div class="container">
+  
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/cpr.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">CPR Guidance Tool</a></h4>
+                <p class="card-text">The idea for this project was given to me by one of my teachers during the pandemic. It is a circuit board with an attached pressure sensor that tells the user via LEDs whether their CPR compressions are of the right speed and pressure. I designed the board using eagle, printed it, drilled it, soldered it, and programmed it using Assembly Language.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">G2 Gear Up!</a></h4>
+                <p class="card-text">My final project for Harvard's CS50x course was G2 Gear Up! which I wrote using Lua. When learning to drive, I had trouble remembering safety checks (mirror, signal, shoulder, etc.) so I made this game to help me. It places you in a common on road scenario and allows you to practice maneuvering through the situation safely. It helped me obtain my G2!</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/backdrops.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">Buddy Backdrops</a></h4>
+                <p class="card-text">My friends (Niveditha Renganathan, Kate Bendall, and Cassandra Hopkins) and I decided to create a Chrome Extension recently. We were inspired by the app Locket and wanted to create an extension that allows friends to share a ‘new tab’ chrome background. For this project, I have been working on the backend side, using flask and SQL to help put it together.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/programrobot.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4>Obstacle Course Programming</h4>
+                <p class="card-text">As might be inferred by the engineering program I chose, I really like working with robots. In high school, my team was the first ever to complete this project. We used C to have the robot follow lines, pickup objects, and read barcodes. We completed a similar challenge last semester during Tron Design Days. </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/morse.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">Agent Morse</a></h4>
+                <p class="card-text">For an open ended project last semester, my team and I created a secret mission scenario where our robot, Agent Morse, would help spies escape a dangerous situation. Using C++ we programmed the robot such that when fed a message, it could tap it in morse code to a trapped comrade on the other side of a wall. </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/robot.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4>Robot Design</h4>
+                <p class="card-text">In my tech design class, we picked a FIRST Lego League competition prompt and designed the optimal robot for it, allowing me to become comfortable with 3d modelling software. I focused on the design of the wheels (which allow the robot to move both horizontally and vertically easily) and overall assembly. </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/tn.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">Tranquil Nights</a></h4>
+                <p class="card-text">For EngHack last year, my team and I created an app with pygame called Tranquil Nights which functions as a sleep tracker. I also got my first taste of web design during the hackathon, as we made a website to accompany the app. Participating in this hackathon was so much fun, and I intend to attend many more in the future.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/web.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">Personal Website</a></h4>
+                <p class="card-text">I wanted to challenge myself to create a more professional looking website, and build up my web development skills, which is why I decided to create this website. I used bootstrap to help with the styling, and am using flask in this project as well. I am committed to continuously improving this website as I learn more about web development.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/ttt.jpg" class="bd-placeholder-img card-img-top" alt="...">
+  
+              <div class="card-body">
+                <h4><a href="#" class="link-primary">Minigame Mine</a></h4>
+                <p class="card-text">I also consider coding to be one of my hobbies, and often experiment with code just to learn and have fun. Recently, I have been using languages and tools I don’t know or have not used in a while to create minigames. I have used pygame to make tic tac toe, and java & swing to make hangman so far, and I plan to keep extending this list.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 {% endblock %}
