alt & colour added

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,28 +15,28 @@
 		</div>
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="../static/images/campusvisit.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/campusvisit.jpg" class="d-block w-100" alt="My visit to the University of Waterloo">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>UWaterloo</h5>
 			  <p>2021</p>
 			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/kennedymain.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/kennedymain.jpg" class="d-block w-100" alt="Image from my Kennedy Space Center trip">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>Kennedy Space Center</h5>
 			  <p>2019</p>
 			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/robotics.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/robotics.jpg" class="d-block w-100" alt="Image from a FIRST Robotics Competition">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>FIRST Robotics Competition</h5>
 			  <p>2020</p>
 			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/womensday.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/womensday.jpg" class="d-block w-100" alt="Group photo of Mayor Crombie's International Women's Day Breakfast attendees">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>Mayor Crombie's International Women's Day Breakfast</h5>
 			  <p>2020</p>
