--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -3,12 +3,12 @@
   <br><br><br>
   <div class="wrapper" style="margin-left: 40px; margin-right: 40px;">
     <div class="col-item" style="width: 64%">
-      <h1>DevOps Software Developer</h1>
-      <h2>Imagine Communications</h2>
+      <h1 style="color: #72A276;">DevOps Software Developer</h1>
+      <h2 style="color: #1C6E8C;">Imagine Communications</h2>
     </div>
     <div class="col-item" style="width: 34%">
-      <h1>PATH Student (TA)</h1>
-      <h2>St. Joseph Secondary School</h2>
+      <h1 style="color: #72A276;">PATH Student (TA)</h1>
+      <h2 style="color: #1C6E8C;">St. Joseph Secondary School</h2>
     </div>
     <div class="col-item" style="width: 64%">
       <p>
@@ -62,7 +62,7 @@
   <div class="row" style="width: 100%;">
     <div class="col-sm-6" style="width: 24%; margin-left: 40px">
       <div class="card">
-        <img src="../static/images/gamenight.png" class="card-img-top" alt="...">
+        <img src="../static/images/gamenight.png" class="card-img-top" alt="Screenshot from a game of Catan">
         <div class="card-body">
           <p class="card-text">Screenshot from the office game night!</p>
         </div>
@@ -70,7 +70,7 @@
     </div>
     <div class="col-sm-6" style="width: 24%">
       <div class="card">
-        <img src="../static/images/binary.jpg" class="card-img-top" alt="...">
+        <img src="../static/images/binary.jpg" class="card-img-top" alt="Screenshot from my lesson on binary">
         <div class="card-body">
           <p class="card-text">Excerpt from the PATH Binary Lesson.</p>
         </div>
@@ -78,7 +78,7 @@
     </div>
     <div class="col-sm-6" style="width: 24%">
       <div class="card">
-        <img src="../static/images/tinkercad.jpg" class="card-img-top" alt="...">
+        <img src="../static/images/tinkercad.jpg" class="card-img-top" alt="Screenshot of solar alarm clock circuit on Tinkercad">
         <div class="card-body">
           <p class="card-text">Solar Alarm Clock project on Tinkercad.</p>
         </div>
@@ -86,7 +86,7 @@
     </div>
     <div class="col-sm-6" style="width: 24%">
       <div class="card">
-        <img src="../static/images/vex.jpg" class="card-img-top" alt="...">
+        <img src="../static/images/vex.jpg" class="card-img-top" alt="Snippet of code from VR Vex">
         <div class="card-body">
           <p class="card-text">Snippet of the VEX Robot code.</p>
         </div>
