--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/cpr.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/cpr.jpg" class="bd-placeholder-img card-img-top" alt="Photo of CPR Guidance Tool PCB">
               <div class="card-body">
                 <h4><a href="#" class="link-primary">CPR Guidance Tool</a></h4>
                 <p class="card-text">The idea for this project was given to me by one of my teachers during the pandemic. It is a circuit board with an attached pressure sensor that tells the user via LEDs whether their CPR compressions are of the right speed and pressure. I designed the board using eagle, printed it, drilled it, soldered it, and programmed it using Assembly Language.</p>
@@ -28,7 +28,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot from the G2 Gear Up! Game. Car at a red light">
               <div class="card-body">
                 <h4><a href="#" class="link-primary">G2 Gear Up!</a></h4>
                 <p class="card-text">My final project for Harvard's CS50x course was G2 Gear Up! which I wrote using Lua. When learning to drive, I had trouble remembering safety checks (mirror, signal, shoulder, etc.) so I made this game to help me. It places you in a common on road scenario and allows you to practice maneuvering through the situation safely. It helped me obtain my G2!</p>
@@ -40,7 +40,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/backdrops.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/backdrops.jpg" class="bd-placeholder-img card-img-top" alt="Chrome extension logo. A pixelart goose.">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Buddy Backdrops</a></h4>
@@ -54,7 +54,7 @@
   
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/programrobot.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/programrobot.jpg" class="bd-placeholder-img card-img-top" alt="Small robot">
   
               <div class="card-body">
                 <h4>Obstacle Course Programming</h4>
@@ -67,7 +67,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/morse.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/morse.jpg" class="bd-placeholder-img card-img-top" alt="Small robot tapping on a wall">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Agent Morse</a></h4>
@@ -80,7 +80,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/robot.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/robot.jpg" class="bd-placeholder-img card-img-top" alt="Robot designed on SolidEdge">
   
               <div class="card-body">
                 <h4>Robot Design</h4>
@@ -94,7 +94,7 @@
   
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/tn.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/tn.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of sleep tracking app">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Tranquil Nights</a></h4>
@@ -107,7 +107,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/web.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/web.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of website code">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Personal Website</a></h4>
@@ -120,7 +120,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/ttt.jpg" class="bd-placeholder-img card-img-top" alt="...">
+              <img src="../static/images/ttt.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of tic tac toe game">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Minigame Mine</a></h4>
