--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -2,7 +2,7 @@
 {% block body %}
   <br><br><br>
   <div class="pages">
-  <h1 class="text-center">Hobbies!</h1>
+  <h1 class="text-center" style="color: #72A276;">Hobbies!</h1>
   <p class="text-center">A collection of the activities I occupy my free time with...</p>
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
@@ -14,11 +14,11 @@
         <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body">
             <div style="float: left">
-              <img src="../static/images/piano.jpg" style="margin-left: 40px" class="img-thumbnail hobby" alt="...">
+              <img src="../static/images/piano.jpg" style="margin-left: 40px" class="img-thumbnail hobby" alt="Photo of a piano with 'Safe and Sound' sheet music on it">
             </div>
             <div class="rightdiv">
               <br>
-              <h2>Music</h2>
+              <h2 style="color: #1C6E8C;">Music</h2>
               <p>Playing piano is probably my favourite hobby, followed closely by ukulele. 
               I really hope to start learning guitar soon as well! I started playing piano about ten years ago, 
               and did lessons for a large amount of that time. I really enjoy taking my favourite songs 
@@ -41,10 +41,10 @@
           <div class="accordion-body">
             <div style="float: right">
               <br>
-              <img src="../static/images/embroidery.jpg" class="img-thumbnail hobby" style="margin-right: 40px" alt="...">
+              <img src="../static/images/embroidery.jpg" class="img-thumbnail hobby" style="margin-right: 40px" alt="Embroidered t-shirt with the lettering 'I'm a mirrorball'">
             </div>
             <div class="leftdiv">
-              <br><h2>Embroidery</h2>
+              <br><h2 style="color: #1C6E8C;">Embroidery</h2>
               <p>Embroidery was another hobby I picked up during the pandemic. 
                 I have mostly worked on customizing shirts so far, and hope to start making a few for friends and family soon. 
                 My favourite shirt I made is easily one inspired by the song mirrorball by Taylor Swift and a sweatshirt design 
@@ -63,18 +63,18 @@
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body">
             <div style="float: left">
-              <img src="../static/images/attwn.jpg" style="margin-left: 50px" class="img-thumbnail hobby" alt="...">
+              <img src="../static/images/attwn.jpg" style="margin-left: 50px" class="img-thumbnail hobby" alt="'And Then There Were None' by Agatha Christie">
             </div>
             <div class="rightdiv2">
               <br>
-              <h2>Reading</h2>
+              <h2 style="color: #1C6E8C;">Reading</h2>
               <p>Over this co-op term, I found myself with a little extra time in the evenings, and returned to reading, 
                 a hobby I grew to have less time for in the later years of high school. I love historical fiction, science fiction, 
                 and mystery books. My most recent favourite is 'And Then There Were None' by Agatha Christie, and my all time favourite book is 'The Book Thief'
                 by Markus Zusak.</p>
             </div>
             <div class="rightdiv3">
-              <img src="../static/images/bookthief.jpg" style="margin-left: 40px" class="img-thumbnail hobby" alt="...">
+              <img src="../static/images/bookthief.jpg" style="margin-left: 40px" class="img-thumbnail hobby" alt="'The Book Thief' by Markus Zusak">
             </div>
             <div style="clear: left;"><br></div>
           </div>
@@ -90,10 +90,10 @@
           <div class="accordion-body">
 
             <div style="float: left">
-              <img src="../static/images/uke.jpg" style="margin-left: 50px" class="img-thumbnail hobby" alt="...">
+              <img src="../static/images/uke.jpg" style="margin-left: 50px" class="img-thumbnail hobby" alt="Ukulele with disney characters painted on the side">
             </div>
             <div class="rightdiv2">
-              <br><h2>Customizations</h2>
+              <br><h2 style="color: #1C6E8C;">Customizations</h2>
               <p>Something else I love doing is adding a bit of my personality to the jewlery I wear or the items I own. The first ukulele I bought 
                 (as part of a build it yourself set) didn't hold its tune too well, so when I saved up for a new one, I decided to turn it into an art piece. 
                 Disney music is super fun to play, so I decided to put my favourite characters on the ukulele. I also decided to make a few earring pairs for myself 
@@ -101,7 +101,7 @@
                 when I have some spare time.</p>
             </div>
             <div class="rightdiv3">
-              <img src="../static/images/earrings.jpg" style="margin-left: 40px; max-width: 160px;" class="img-thumbnail" alt="...">
+              <img src="../static/images/earrings.jpg" style="margin-left: 40px; max-width: 160px;" class="img-thumbnail" alt="Earrings with the 'folklore' album cover on them">
             </div>
           </div>
         </div>
