--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="https://youtu.be/6pdLivuMACE">Project Video</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Contact me: barretto.shanaya@gmail.com</a>
+              <a class="nav-link" href="mailto:ssbarret@uwaterloo.ca">Contact me!</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/shanayabarretto">Github</a>
